<resources>
    <string name="app_name">IResume</string>

    <string name="your_name">Your name</string>
    <string name="email">Your email</string>

    <string name="user_picture">User picture</string>
    <string name="Education">Education</string>
    <string name="add_education">Add Education</string>
    <string name="Experience">Experience</string>
    <string name="Projects">Projects</string>
    <string name="edit_education">edit education</string>


    <string name="school">school</string>
    <string name="major">major</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="courses">courses</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">action save</string>
    <string name="choose_user_picture">Choose user picture</string>
    <string name="basic_info_edit_name_hint">Your name</string>
    <string name="basic_info_edit_email_hint">Your email</string>
    <string name="experience_edit_company_hint">company</string>
    <string name="experience_edit_title_hint">Title</string>
    <string name="experience_edit_details_hint">what do you do</string>
    <string name="edit_experience">edit experience</string>
    <string name="project_edit_name_hint">Project name</string>
    <string name="project_edit_details_hint">Project detials</string>
    <string name="edit_project">edit project</string>
</resources>
